examples/test/testpolicy7195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7195
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key28: value23
      key18: value13
      key24: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value2
          key24: value12
          key38: value21
      podSelector:
        matchLabels:
          key0: value7
          key34: value37
